--- a/contact.html
+++ b/contact.html
@@ -9,15 +9,23 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
-
+<link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-regular-straight/css/uicons-regular-straight.css'>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap" rel="stylesheet">
+<link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
   <script src="https://cdn.tailwindcss.com"></script>
+
+<link rel="stylesheet" href="./static/css/style.css">
+
+
+
+
+
   <script>
     tailwind.config = {
       theme: {
         fontFamily: {
-          sans: ['Montserrat', 'sans-serif']
-        },
+        raleway: ['Raleway', 'sans-serif'],
+      },
         extend: {
           colors: {
             primary: '#84D5E6',
@@ -27,39 +35,49 @@
       }
     }
   </script>
+  <style>
+    html, body {
+    overflow-x: hidden;
+}
+ .slide {
+      transition: opacity 0.5s ease-in-out;
+    }
+  </style>
 </head>
 
 <body class="bg-gray-50 text-gray-900 font-sans">
 
+ <header class="bg-white shadow-sm sticky top-0 z-50 w-full" style="position: fixed;">
+  <div class="w-full px-4 md:px-48 py-6 flex items-center justify-between">
+    
+    <a href="index.html">
+    <div class="text-xl font-bold text-primary">LogisticsCo</div>
+    </a>
+    
+    <nav class="hidden md:flex space-x-8 text-gray-800 font-medium">
+      <a href="index.html" class="hover:text-primary">Home</a>
+      <a href="about.html" class="hover:text-primary">About</a>
+      <a href="services.html" class="hover:text-primary">Services</a>
+      <a href="contact.html" class="text-primary font-semibold">Contact</a>
+    </nav>
 
-  <header class="bg-white shadow-sm sticky top-0 z-50">
-    <div class="max-w-7xl mx-auto px-4 py-6 flex items-center justify-between">
-      <div class="text-xl font-bold text-primary">LogisticsCo</div>
-      <nav class="hidden md:flex space-x-8 text-gray-800 font-medium">
-        <a href="index.html" class="hover:text-primary">Home</a>
-        <a href="services.html" class="hover:text-primary">Services</a>
-        <a href="about.html" class="hover:text-primary">About</a>
-        <a href="contact.html" class="text-primary font-semibold">Contact</a>
-      </nav>
-      <div class="hidden md:block">
-        <a href="#" class="bg-accent text-white px-4 py-2 rounded hover:brightness-110 transition">Get a Quote</a>
-      </div>
-      <button class="md:hidden text-2xl" id="menuToggle">☰</button>
+    <div class="hidden md:block">
+      <a href="contact.html" class="bg-accent text-white px-4 py-2 rounded hover:brightness-110 transition">Contact Now</a>
     </div>
-   
 
-<div id="mobileMenu" class="fixed top-0 right-0 h-full w-3/4 bg-white z-50 transform translate-x-full transition-transform duration-300 ease-in-out shadow-lg">
-  <div class="p-6 space-y-4">
-    <a href="index.html" class="block text-gray-800 hover:text-primary">Home</a>
-    <a href="services.html" class="block text-gray-800 hover:text-primary">Services</a>
-    <a href="about.html" class="block text-gray-800 hover:text-primary">About</a>
-    <a href="contact.html" class="block text-primary font-semibold">Contact</a>
-    <a href="#" class="block bg-accent text-white text-center py-2 rounded hover:brightness-110">Get a Quote</a>
+    <button class="md:hidden text-3xl " id="menuToggle">☰</button>
   </div>
-</div>
 
-
-  </header>
+  <div id="mobileMenu" class="fixed top-0 right-0 h-full w-3/4 bg-white z-50 transform translate-x-full transition-transform duration-300 ease-in-out shadow-lg">
+    <div class="p-6 space-y-8 mt-[4rem]">
+      <a href="index.html" class="block text-gray-800 hover:text-primary">Home</a>
+      <a href="about.html" class="block text-gray-800 hover:text-primary">About</a>
+      <a href="services.html" class="block text-gray-800 hover:text-primary">Services</a>
+      <a href="contact.html" class="block text-primary font-semibold">Contact</a>
+      <a href="contact.html" class="block bg-accent text-white text-center py-2 rounded hover:brightness-110">Contact Now</a>
+    </div>
+  </div>
+</header>
 
 <div class="w-full h-64 bg-black relative text-white px-[9.5rem] max-md:px-6 flex flex-col justify-center">
 
@@ -135,7 +153,7 @@
     <div>
       <h3 class="font-semibold text-lg mb-3">Our Services</h3>
       <ul class="space-y-2">
-        <li><i class="fas fa-angle-right mr-2"></i>Cargo & Freight</li>
+        <li><i class="fas fa-angle-right mr-2"></i>Cargo Transport</li>
         <li><i class="fas fa-angle-right mr-2"></i>Import & Export</li>
         <li><i class="fas fa-angle-right mr-2"></i>Duty Drawback</li>
         <li><i class="fas fa-angle-right mr-2"></i>Cargo Insurance</li>
