--- a/services.html
+++ b/services.html
@@ -9,15 +9,23 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+<link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-regular-straight/css/uicons-regular-straight.css'>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap" rel="stylesheet">
+<link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
+  <script src="https://cdn.tailwindcss.com"></script>
 
 <link rel="stylesheet" href="./static/css/style.css">
-  <script src="https://cdn.tailwindcss.com"></script>
+
+
+
+
+
   <script>
     tailwind.config = {
       theme: {
         fontFamily: {
-          sans: ['Montserrat', 'sans-serif']
-        },
+        raleway: ['Raleway', 'sans-serif'],
+      },
         extend: {
           colors: {
             primary: '#84D5E6',
@@ -27,40 +35,48 @@
       }
     }
   </script>
+  <style>
+    html, body {
+    overflow-x: hidden;
+}
+ .slide {
+      transition: opacity 0.5s ease-in-out;
+    }
+  </style>
 </head>
 
 <body class="bg-gray-50 text-gray-900 font-sans">
 
+ <header class="bg-white shadow-sm sticky top-0 z-50 w-full" style="position: fixed;">
+  <div class="w-full px-4 md:px-48 py-6 flex items-center justify-between">
+    
+ <a href="index.html">
+    <div class="text-xl font-bold text-primary">LogisticsCo</div>
+    </a>    
+    <nav class="hidden md:flex space-x-8 text-gray-800 font-medium">
+      <a href="index.html" class="hover:text-primary">Home</a>
+      <a href="about.html" class="hover:text-primary">About</a>
+      <a href="services.html" class="text-primary font-semibold">Services</a>
+      <a href="contact.html" class="hover:text-primary">Contact</a>
+    </nav>
 
-  <header class="bg-white shadow-sm sticky top-0 z-50">
-    <div class="max-w-7xl mx-auto px-4 py-6 flex items-center justify-between">
-      <div class="text-xl font-bold text-primary">LogisticsCo</div>
-      <nav class="hidden md:flex space-x-8 text-gray-800 font-medium">
-        <a href="index.html" class="hover:text-primary">Home</a>
-        <a href="services.html" class="text-primary font-semibold">Services</a>
-        <a href="about.html" class="hover:text-primary">About</a>
-        <a href="contact.html" class="hover:text-primary">Contact</a>
-      </nav>
-      <div class="hidden md:block">
-        <a href="#" class="bg-accent text-white px-4 py-2 rounded hover:brightness-110 transition">Get a Quote</a>
-      </div>
-      <button class="md:hidden text-2xl" id="menuToggle">☰</button>
+    <div class="hidden md:block">
+      <a href="contact.html" class="bg-accent text-white px-4 py-2 rounded hover:brightness-110 transition">Contact Now</a>
     </div>
-   
 
-<div id="mobileMenu" class="fixed top-0 right-0 h-full w-3/4 bg-white z-50 transform translate-x-full transition-transform duration-300 ease-in-out ">
-  <div class="p-6 space-y-4">
-    <a href="index.html" class="block text-gray-800 hover:text-primary">Home</a>
-    <a href="services.html" class="block text-gray-800 hover:text-primary">Services</a>
-    <a href="about.html" class="block text-gray-800 hover:text-primary">About</a>
-    <a href="contact.html" class="block text-primary font-semibold">Contact</a>
-    <a href="#" class="block bg-accent text-white text-center py-2 rounded hover:brightness-110">Get a Quote</a>
+    <button class="md:hidden text-3xl " id="menuToggle">☰</button>
   </div>
-</div>
 
-
-  </header>
-
+  <div id="mobileMenu" class="fixed top-0 right-0 h-full w-3/4 bg-white z-50 transform translate-x-full transition-transform duration-300 ease-in-out shadow-lg">
+    <div class="p-6 space-y-8 mt-[4rem]">
+      <a href="index.html" class="block hover:text-primary">Home</a>
+      <a href="about.html" class="block text-gray-800 hover:text-primary">About</a>
+      <a href="services.html" class="block text-primary font-semibold">Services</a>
+      <a href="contact.html" class="block text-gray-800 hover:text-primary">Contact</a>
+      <a href="contact.html" class="block bg-accent text-white text-center py-2 rounded hover:brightness-110">Contact Now</a>
+    </div>
+  </div>
+</header>
 <div class="w-full h-64 bg-black relative text-white px-[9.5rem] max-md:px-6 flex flex-col justify-center">
 
   <div class="absolute inset-0 bg-cover bg-center opacity-60" style="background-image: url('./static/images/about.jpeg');"></div>
@@ -86,14 +102,12 @@
 
 
 
-<!-- Services Section -->
 <section class="bg-gray-50 py-16 px-6">
   <div class="max-w-7xl mx-auto text-center">
     <p class="text-accent uppercase tracking-widest mb-2">What We Offer</p>
     <h2 class="text-4xl font-semibold text-primary mb-12">Our Services</h2>
 
     <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-10">
-      <!-- Card 1 -->
       <div class="bg-white  rounded-lg overflow-hidden group">
         <div class="overflow-hidden">
           <img src="https://cdn.pixabay.com/photo/2017/01/29/15/21/container-2018508_640.jpg"alt="Import & Export" class="w-full h-48 object-cover transform group-hover:scale-110 transition duration-300">
@@ -105,7 +119,6 @@
         </div>
       </div>
 
-      <!-- Card 2 -->
       <div class="bg-white  rounded-lg overflow-hidden group">
         <div class="overflow-hidden">
           <img src="https://cdn.pixabay.com/photo/2021/11/15/18/38/container-6799046_640.jpg" alt="Import & Export" class="w-full h-48 object-cover transform group-hover:scale-110 transition duration-300">
@@ -117,7 +130,6 @@
         </div>
       </div>
 
-      <!-- Card 3 -->
       <div class="bg-white  rounded-lg overflow-hidden group">
         <div class="overflow-hidden">
           <img src="https://cdn.pixabay.com/photo/2020/01/02/06/09/airport-4735067_640.jpg" alt="Duty Drawback" class="w-full h-48 object-cover transform group-hover:scale-110 transition duration-300">
@@ -129,7 +141,6 @@
         </div>
       </div>
 
-      <!-- Card 4 -->
       <div class="bg-white  rounded-lg overflow-hidden group">
         <div class="overflow-hidden">
           <img src="./static/images/cargo_insurance.jpeg" alt="Cargo Insurance" class="w-full h-48 object-cover transform group-hover:scale-110 transition duration-300">
@@ -143,7 +154,6 @@
     </div>
   </div>
 
-  <!-- Modals -->
   <div id="modal1" class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center z-50">
     <div class="bg-white p-8 rounded  w-full max-w-md">
       <h2 class="text-2xl font-bold mb-4">Cargo Transport</h2>
@@ -177,16 +187,7 @@
   </div>
 </section>
 
-<script>
-  function openModal(id) {
-    document.getElementById(id).classList.remove('hidden');
-    document.getElementById(id).classList.add('flex');
-  }
-  function closeModal(id) {
-    document.getElementById(id).classList.add('hidden');
-    document.getElementById(id).classList.remove('flex');
-  }
-</script>
+
 
 
 
@@ -221,7 +222,7 @@
     <div>
       <h3 class="font-semibold text-lg mb-3">Our Services</h3>
       <ul class="space-y-2">
-        <li><i class="fas fa-angle-right mr-2"></i>Cargo & Freight</li>
+        <li><i class="fas fa-angle-right mr-2"></i>Cargo Transport</li>
         <li><i class="fas fa-angle-right mr-2"></i>Import & Export</li>
         <li><i class="fas fa-angle-right mr-2"></i>Duty Drawback</li>
         <li><i class="fas fa-angle-right mr-2"></i>Cargo Insurance</li>
@@ -246,6 +247,15 @@
   <script src="./static/js/script.js"></script>
    
  
-
+<script>
+  function openModal(id) {
+    document.getElementById(id).classList.remove('hidden');
+    document.getElementById(id).classList.add('flex');
+  }
+  function closeModal(id) {
+    document.getElementById(id).classList.add('hidden');
+    document.getElementById(id).classList.remove('flex');
+  }
+</script>
 </body>
 </html>
