--- a/about.html
+++ b/about.html
@@ -213,7 +213,7 @@
     <div>
       <h3 class="font-semibold text-lg mb-3">Contact Info</h3>
       <p>123 Logistic Street,<br>Kochi, Kerala, India</p>
-      <p class="mt-2">Phone: +91 98765 43210</p>
+      <p class="mt-2">Phone:  +91 8589961888 <br> +91 8129033332</p>
       <p class="mt-2">Email: support@logisticsco.com</p>
     </div>
   </div>
