--- a/contact.html
+++ b/contact.html
@@ -119,7 +119,7 @@
     <div class=" min-h-[500px] space-y-4 pt-2">
       <h2 class="text-xl font-semibold text-primary">Contact Details</h2>
       <p><strong>Address:</strong> 123 Logistic Street, Kochi, Kerala, India</p>
-      <p><strong>Phone:</strong> +91 98765 43210</p>
+      <p><strong>Phone:</strong> +91 8129033332 <br> +91 8589961888</p>
       <p><strong>Email:</strong> support@logisticsco.com</p>
       <p><strong>Working Hours:</strong> Mon – Sat: 9:00 AM – 6:00 PM</p>
       <div class="mt-4 w-full">
@@ -163,7 +163,7 @@
     <div>
       <h3 class="font-semibold text-lg mb-3">Contact Info</h3>
       <p>123 Logistic Street,<br>Kochi, Kerala, India</p>
-      <p class="mt-2">Phone: +91 98765 43210</p>
+      <p class="mt-2">Phone:  +91 8589961888 <br> +91 8129033332</p>
       <p class="mt-2">Email: support@logisticsco.com</p>
     </div>
   </div>
