--- a/services.html
+++ b/services.html
@@ -126,7 +126,7 @@
         <div class="p-6 text-left">
           <h3 class="text-lg font-semibold mb-2">Import & Export Handling</h3>
           <p class="text-gray-600 text-sm mb-4">We manage the complexities of import/export logistics and documentation effectively.</p>
-          <button onclick="openModal('modal1')" class="btn-readmore hover-slide-left bg-accent text-white px-4 py-2 rounded hover:scale-105 transition-transform duration-300">Read More</button>
+          <button onclick="openModal('modal2')" class="btn-readmore hover-slide-left bg-accent text-white px-4 py-2 rounded hover:scale-105 transition-transform duration-300">Read More</button>
         </div>
       </div>
 
@@ -137,7 +137,7 @@
         <div class="p-6 text-left">
           <h3 class="text-lg font-semibold mb-2">Drawback & Refunds</h3>
           <p class="text-gray-600 text-sm mb-4">We assist in recovering eligible customs duties and process refunds efficiently.</p>
-          <button onclick="openModal('modal1')" class="btn-readmore hover-slide-left bg-accent text-white px-4 py-2 rounded hover:scale-105 transition-transform duration-300">Read More</button>
+          <button onclick="openModal('modal3')" class="btn-readmore hover-slide-left bg-accent text-white px-4 py-2 rounded hover:scale-105 transition-transform duration-300">Read More</button>
         </div>
       </div>
 
@@ -148,7 +148,7 @@
         <div class="p-6 text-left">
           <h3 class="text-lg font-semibold mb-2">Cargo Insurance</h3>
           <p class="text-gray-600 text-sm mb-4">We offer comprehensive cargo insurance services to secure your shipments end-to-end.</p>
-          <button onclick="openModal('modal1')" class="btn-readmore hover-slide-left bg-accent text-white px-4 py-2 rounded hover:scale-105 transition-transform duration-300">Read More</button>
+          <button onclick="openModal('modal4')" class="btn-readmore hover-slide-left bg-accent text-white px-4 py-2 rounded hover:scale-105 transition-transform duration-300">Read More</button>
         </div>
       </div>
     </div>
@@ -232,7 +232,7 @@
     <div>
       <h3 class="font-semibold text-lg mb-3">Contact Info</h3>
       <p>123 Logistic Street,<br>Kochi, Kerala, India</p>
-      <p class="mt-2">Phone: +91 98765 43210</p>
+      <p class="mt-2">Phone:  +91 8589961888 <br> +91 8129033332</p>
       <p class="mt-2">Email: support@logisticsco.com</p>
     </div>
   </div>
