--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 <a href="#explore">
   <button class="bg-[#84D5E6] hover:bg-[#F0C479] text-white font-semibold px-6 py-3 rounded shadow-md transition-transform transform hover:scale-105">
     Explore Now
-  </button>
+  </button></a>
         </div>
       </div>
 
@@ -124,7 +124,7 @@
          <a href="#explore">
   <button class="bg-[#84D5E6] hover:bg-[#F0C479] text-white font-semibold px-6 py-3 rounded shadow-md transition-transform transform hover:scale-105">
     Explore Now
-  </button>
+  </button></a>
         </div>
       </div>
     </div>
