--- a/about.html
+++ b/about.html
@@ -117,7 +117,7 @@
     </p>
   </div>
 </section>
-<section class=" py-16 px-6 ">
+<section class=" pb-8 px-6 max-md:px-0 mt-20 mb-20 max-md:mt-0 max-md:mb-0 ">
   <div class="max-w-7xl mx-auto grid md:grid-cols-2 gap-12 items-center px-6 ">
     
     <div>
