--- a/contact.html
+++ b/contact.html
@@ -107,8 +107,8 @@
     <p class="text-left text-gray-600 mt-2">We’d love to hear from you. Whether it’s a question about services, pricing, or anything else, our team is ready to help.</p>
   </div>
 
-  <div class="grid grid-cols-1 md:grid-cols-2 gap-20 items-start">
-    <form id="contactForm" class="space-y-4  min-h-[500px] pt-2">
+  <div class="grid grid-cols-1 md:grid-cols-2 gap-20 items-start max-md:gap-0">
+    <form id="contactForm" class="space-y-4  min-h-[500px] pt-2 max-md:mb-[-4rem]">
       <input type="text" name="name" placeholder="Your Name" required class="w-full border border-gray-300 p-3 rounded">
       <input type="email" name="email" placeholder="Your Email" required class="w-full border border-gray-300 p-3 rounded">
       <input type="tel" name="phone" placeholder="Phone Number" required class="w-full border border-gray-300 p-3 rounded">
@@ -116,7 +116,7 @@
       <button type="submit" class="bg-primary text-white px-6 py-2 rounded hover:brightness-110">Send Message</button>
     </form>
 
-    <div class=" min-h-[500px] space-y-4 pt-2">
+    <div class=" min-h-[500px] space-y-4 pt-2 ">
       <h2 class="text-xl font-semibold text-primary">Contact Details</h2>
       <p><strong>Address:</strong> 123 Logistic Street, Kochi, Kerala, India</p>
       <p><strong>Phone:</strong> +91 8129033332 <br> +91 8589961888</p>
