--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
       </div>
     </div>
 
-    <button id="prev" class="absolute left-4 top-1/2 transform -translate-y-1/2 text-white text-3xl bg-black bg-opacity-40 p-2 z-20">&#10094;</button>
-    <button id="next" class="absolute right-4 top-1/2 transform -translate-y-1/2 text-white text-3xl bg-black bg-opacity-40 p-2 z-20">&#10095;</button>
+    <button id="prev" class="absolute left-4 top-1/2 transform -translate-y-1/2 text-white text-3xl max-md:text-xl bg-black bg-opacity-40 p-2 z-20">&#10094;</button>
+    <button id="next" class="absolute right-4 top-1/2 transform -translate-y-1/2 text-white text-3xl max-md:text-xl bg-black bg-opacity-40 p-2 z-20">&#10095;</button>
   </section>
 
   <div class="max-md:hidden absolute -bottom-20 left-1/2 transform -translate-x-1/2 z-30 w-full max-w-6xl px-4 flex flex-col md:flex-row justify-between space-y-6 md:space-y-0 md:space-x-6">
