--- a/index.html
+++ b/index.html
@@ -237,9 +237,11 @@
     
 <div class="flex-shrink-0 w-full sm:w-full lg:w-[45%] h-[500px] snap-start transition-all duration-500">
       <div class="flex flex-col sm:flex-row w-full h-full">
-        <div class="w-full sm:w-1/2 h-[250px] sm:h-full overflow-hidden">
-          <img src="https://cdn.pixabay.com/photo/2017/01/29/15/21/container-2018508_640.jpg" alt="Import & Export" class="w-full h-full object-cover transform group-hover:scale-110 transition duration-300">
-        </div>
+<div class="w-full sm:w-1/2 h-[250px] sm:h-full overflow-hidden relative group">
+            <img src="https://cdn.pixabay.com/photo/2017/01/29/15/21/container-2018508_640.jpg" alt="Import & Export" class="w-full h-full object-cover transform group-hover:scale-110 transition duration-300">
+          <div class="absolute inset-0 bg-black bg-opacity-40 translate-x-full group-hover:translate-x-0 transition-transform duration-500 ease-in-out"></div>
+
+          </div>
         <div class="w-full sm:w-1/2 h-auto sm:h-full p-6 flex flex-col justify-center">
           <h3 class="text-2xl font-bold text-[#F0C479] mb-2">Cargo Transport</h3>
           <p class="text-gray-200 mb-4">We provide reliable cargo transport solutions across land, air, and sea.</p>
@@ -250,8 +252,10 @@
 
 <div class="flex-shrink-0 w-full sm:w-full lg:w-[45%] h-[500px] snap-start transition-all duration-500">
       <div class="flex flex-col sm:flex-row w-full h-full">
-        <div class="w-full sm:w-1/2 h-[250px] sm:h-full overflow-hidden">
+<div class="w-full sm:w-1/2 h-[250px] sm:h-full overflow-hidden relative group">
           <img src="https://cdn.pixabay.com/photo/2021/11/15/18/38/container-6799046_640.jpg" alt="Import & Export" class="w-full h-full object-cover transform group-hover:scale-110 transition duration-300">
+                  <div class="absolute inset-0 bg-black bg-opacity-40 translate-x-full group-hover:translate-x-0 transition-transform duration-500 ease-in-out"></div>
+
         </div>
         <div class="w-full sm:w-1/2 h-auto sm:h-full p-6 flex flex-col justify-center">
           <h3 class="text-2xl font-bold text-[#F0C479] mb-2">Import & Export</h3>
@@ -263,8 +267,10 @@
 
 <div class="flex-shrink-0 w-full sm:w-full lg:w-[45%] h-[500px] snap-start transition-all duration-500">
       <div class="flex flex-col sm:flex-row w-full h-full">
-        <div class="w-full sm:w-1/2 h-[250px] sm:h-full overflow-hidden">
+<div class="w-full sm:w-1/2 h-[250px] sm:h-full overflow-hidden relative group">
           <img src="https://cdn.pixabay.com/photo/2020/01/02/06/09/airport-4735067_640.jpg" alt="Duty Drawback" class="w-full h-full object-cover transform group-hover:scale-110 transition duration-300">
+                  <div class="absolute inset-0 bg-black bg-opacity-40 translate-x-full group-hover:translate-x-0 transition-transform duration-500 ease-in-out"></div>
+
         </div>
         <div class="w-full sm:w-1/2 h-auto sm:h-full p-6 flex flex-col justify-center">
           <h3 class="text-2xl font-bold text-[#F0C479] mb-2">Drawback & Refunds</h3>
@@ -276,8 +282,10 @@
 
 <div class="flex-shrink-0 w-full sm:w-full lg:w-[45%] h-[500px] snap-start transition-all duration-500">
       <div class="flex flex-col sm:flex-row w-full h-full">
-        <div class="w-full sm:w-1/2 h-[250px] sm:h-full overflow-hidden">
+<div class="w-full sm:w-1/2 h-[250px] sm:h-full overflow-hidden relative group">
           <img src="./static/images/cargo_insurance.jpeg" alt="Cargo Insurance" class="w-full h-full object-cover transform group-hover:scale-110 transition duration-300">
+                  <div class="absolute inset-0 bg-black bg-opacity-40 translate-x-full group-hover:translate-x-0 transition-transform duration-500 ease-in-out"></div>
+
         </div>
         <div class="w-full sm:w-1/2 h-auto sm:h-full p-6 flex flex-col justify-center">
           <h3 class="text-2xl font-bold text-[#F0C479] mb-2">Cargo Insurance</h3>
