--- a/about.html
+++ b/about.html
@@ -107,7 +107,8 @@
   </div>
 
   <div class="reveal-right translate-x-[100px] transition-all duration-1000">
-    <h1 class=" text-[#031A4C] uppercase tracking-widest mb-2">About Us</h1>
+<h1 class="text-[#031A4C] uppercase tracking-widest mb-2">About Us</h1>
+<div class="w-20 h-[0.1rem] bg-[#F0C479] mb-6"></div>
     <h2 class="text-3xl text-[#005EB8] mb-4">About Our Logistics Company</h2>
     <p class="text-gray-700 leading-relaxed">
       At <strong>LogisticsCo</strong>, we specialize in providing efficient and reliable transportation, cargo handling, import/export solutions and customs support. 
@@ -194,27 +195,57 @@
     <div>
       <h3 class="font-semibold text-lg mb-3">Options</h3>
       <ul class="space-y-2">
-        <li><i class="fas fa-angle-right mr-2"></i><a href="index.html">Home</a></li>
-        <li><i class="fas fa-angle-right mr-2"></i><a href="about.html">About</a></li>
-        <li><i class="fas fa-angle-right mr-2"></i><a href="services.html">Services</a></li>
-        <li><i class="fas fa-angle-right mr-2"></i><a href="contact.html">Contact</a></li>
-      </ul>
+  <li class="relative group">
+    <i class="fas fa-angle-right mr-2"></i><a href="index.html">Home</a>
+    <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Go to Home Page</span>
+  </li>
+  <li class="relative group">
+    <i class="fas fa-angle-right mr-2"></i><a href="about.html">About</a>
+    <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Learn About Us</span>
+  </li>
+  <li class="relative group">
+    <i class="fas fa-angle-right mr-2"></i><a href="services.html">Services</a>
+    <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">See What We Offer</span>
+  </li>
+  <li class="relative group">
+    <i class="fas fa-angle-right mr-2"></i><a href="contact.html">Contact</a>
+    <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Get in Touch</span>
+  </li>
+</ul>
+
     </div>
 
     <div>
       <h3 class="font-semibold text-lg mb-3">Our Services</h3>
       <ul class="space-y-2">
-        <li><i class="fas fa-angle-right mr-2"></i>Cargo Transport</li>
-        <li><i class="fas fa-angle-right mr-2"></i>Import & Export</li>
-        <li><i class="fas fa-angle-right mr-2"></i>Duty Drawback</li>
-        <li><i class="fas fa-angle-right mr-2"></i>Cargo Insurance</li>
-      </ul>
+  <li class="relative group">
+    <i class="fas fa-angle-right mr-2"></i>Cargo Transport
+    <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Reliable Delivery</span>
+  </li>
+  <li class="relative group">
+    <i class="fas fa-angle-right mr-2"></i>Import & Export
+    <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Global Trade Help</span>
+  </li>
+  <li class="relative group">
+    <i class="fas fa-angle-right mr-2"></i>Duty Drawback
+    <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Tax Refund Process</span>
+  </li>
+  <li class="relative group">
+    <i class="fas fa-angle-right mr-2"></i>Cargo Insurance
+    <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Your Goods Secured</span>
+  </li>
+</ul>
+
     </div>
 
     <div>
       <h3 class="font-semibold text-lg mb-3">Contact Info</h3>
       <p>123 Logistic Street,<br>Kochi, Kerala, India</p>
-      <p class="mt-2">Phone:  +91 8589961888 <br> +91 8129033332</p>
+      <p class="mt-2">
+  <span class="inline-block min-w-[45px] font-semibold">Phone:</span> +91 8589961888<br>
+  <span class="inline-block min-w-[45px]"></span> +91 8129033332
+</p>
+
       <p class="mt-2">Email: support@logisticsco.com</p>
     </div>
   </div>
@@ -226,7 +257,25 @@
 </footer>
 
 <a href="https://wa.me/918589961888" target="_blank" class="fixed bottom-4 right-4 z-50">
-  <img src="https://img.icons8.com/fluency/48/000000/whatsapp.png" alt="Chat on WhatsApp" class="w-12 h-12 shadow-lg hover:scale-110 transition-transform duration-300" />
+  <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 256 258"
+    class="w-12 h-12 hover:scale-110 transition-transform duration-300">
+    <defs>
+      <linearGradient id="logosWhatsappIcon0" x1="50%" x2="50%" y1="100%" y2="0%">
+        <stop offset="0%" stop-color="#1faf38" />
+        <stop offset="100%" stop-color="#60d669" />
+      </linearGradient>
+      <linearGradient id="logosWhatsappIcon1" x1="50%" x2="50%" y1="100%" y2="0%">
+        <stop offset="0%" stop-color="#f9f9f9" />
+        <stop offset="100%" stop-color="#fff" />
+      </linearGradient>
+    </defs>
+    <path fill="url(#logosWhatsappIcon0)"
+      d="M5.463 127.456c-.006 21.677 5.658 42.843 16.428 61.499L4.433 252.697l65.232-17.104a123 123 0 0 0 58.8 14.97h.054c67.815 0 123.018-55.183 123.047-123.01c.013-32.867-12.775-63.773-36.009-87.025c-23.23-23.25-54.125-36.061-87.043-36.076c-67.823 0-123.022 55.18-123.05 123.004" />
+    <path fill="url(#logosWhatsappIcon1)"
+      d="M1.07 127.416c-.007 22.457 5.86 44.38 17.014 63.704L0 257.147l67.571-17.717c18.618 10.151 39.58 15.503 60.91 15.511h.055c70.248 0 127.434-57.168 127.464-127.423c.012-34.048-13.236-66.065-37.3-90.15C194.633 13.286 162.633.014 128.536 0C58.276 0 1.099 57.16 1.071 127.416m40.24 60.376l-2.523-4.005c-10.606-16.864-16.204-36.352-16.196-56.363C22.614 69.029 70.138 21.52 128.576 21.52c28.3.012 54.896 11.044 74.9 31.06c20.003 20.018 31.01 46.628 31.003 74.93c-.026 58.395-47.551 105.91-105.943 105.91h-.042c-19.013-.01-37.66-5.116-53.922-14.765l-3.87-2.295l-40.098 10.513z" />
+    <path fill="#fff"
+      d="M96.678 74.148c-2.386-5.303-4.897-5.41-7.166-5.503c-1.858-.08-3.982-.074-6.104-.074c-2.124 0-5.575.799-8.492 3.984c-2.92 3.188-11.148 10.892-11.148 26.561s11.413 30.813 13.004 32.94c1.593 2.123 22.033 35.307 54.405 48.073c26.904 10.609 32.379 8.499 38.218 7.967c5.84-.53 18.844-7.702 21.497-15.139c2.655-7.436 2.655-13.81 1.859-15.142c-.796-1.327-2.92-2.124-6.105-3.716s-18.844-9.298-21.763-10.361c-2.92-1.062-5.043-1.592-7.167 1.597c-2.124 3.184-8.223 10.356-10.082 12.48c-1.857 2.129-3.716 2.394-6.9.801c-3.187-1.598-13.444-4.957-25.613-15.806c-9.468-8.442-15.86-18.867-17.718-22.056c-1.858-3.184-.199-4.91 1.398-6.497c1.431-1.427 3.186-3.719 4.78-5.578c1.588-1.86 2.118-3.187 3.18-5.311c1.063-2.126.531-3.986-.264-5.579c-.798-1.593-6.987-17.343-9.819-23.64" />
+  </svg>
 </a>
 
   <script src="./static/js/script.js"></script>
