--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
 
 <body class="relative text-gray-900 font-sans">
    <div class="absolute inset-0 z-0">
-<img src="./static/images/contactbg.jpg" style="opacity: 0.03;" class="w-full h-full object-cover" />
+<img src="./static/images/contactbg.jpg" style="opacity: 0.04;" class="w-full h-full object-cover" />
   </div>
 
 
@@ -109,7 +109,7 @@
   <div class="reveal-right translate-x-[100px] transition-all duration-1000">
 <h1 class="text-[#031A4C] uppercase tracking-widest mb-2">About Us</h1>
 <div class="w-20 h-[0.1rem] bg-[#F0C479] mb-6"></div>
-    <h2 class="text-3xl text-[#005EB8] mb-4">About Our Logistics Company</h2>
+    <h2 class="text-3xl text-[#005EB8] mb-4 font-semibold">About Our Logistics Company</h2>
     <p class="text-gray-700 leading-relaxed">
       At <strong>LogisticsCo</strong>, we specialize in providing efficient and reliable transportation, cargo handling, import/export solutions and customs support. 
       With years of experience in the logistics industry, our goal is to simplify global shipping, whether it's FMCG, garments, spices or machinery.
