--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
 
 <body class="relative text-gray-900 font-sans">
    <div class="absolute inset-0 z-0">
-<img src="./static/images/contactbg.jpg" style="opacity: 0.03;" class="w-full h-full object-cover" />
+<img src="./static/images/contactbg.jpg" style="opacity: 0.04;" class="w-full h-full object-cover" />
   </div>
 <header  id="mainHeader" class="bg-transparent shadow-sm sticky top-0 z-50 w-full" style="position: fixed;">
   <div class="w-full px-4 md:px-48 py-6 flex items-center">
@@ -103,7 +103,7 @@
 <main class="max-w-7xl mx-auto px-4 pt-12 pb-20 space-y-12 mt-10">
 
   <div>
-    <h1 class="text-3xl text-left text-gray-800">Get in Touch</h1>
+    <h1 class="text-3xl text-left text-[#005EB8] font-semibold">Get in Touch</h1>
     <p class="text-left text-gray-600 mt-2">We’d love to hear from you. Whether it’s a question about services, pricing, or anything else, our team is ready to help.</p>
   </div>
 
