--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 <body class="relative text-gray-900 font-sans">
    <div class="absolute inset-0 z-0">
-<img src="./static/images/contactbg.jpg" style="opacity: 0.03;" class="w-full h-full object-cover" />
+<img src="./static/images/contactbg.jpg" style="opacity: 0.04;" class="w-full h-full object-cover" />
   </div>
 
 
@@ -266,7 +266,7 @@
 
 <section class="py-20 px-6 md:px-20 ">
   <div class="max-w-7xl mx-auto text-center mb-16">
-    <h2 class="text-4xl md:text-4xl font-bold text-[#005EB8] mb-4">
+    <h2 class="text-4xl md:text-4xl font-semibold text-[#005EB8] mb-4">
       10+ Years of Trusted Experience
     </h2>
     <p class="text-gray-600 text-lg max-w-2xl mx-auto">
@@ -339,6 +339,47 @@
 
 
 
+<section class=" py-20 px-6">
+  <div class="max-w-6xl mx-auto">
+    <!-- Section Header -->
+    <div class="text-center mb-16">
+      <p class="text-[#031A4C] uppercase tracking-widest mb-2">Our Commitment</p>
+      <div class="w-20 h-[2px] bg-[#F0C479] mb-4 mx-auto"></div>
+      <h2 class="text-4xl font-bold text-[#005EB8]">In Every Step of the Journey</h2>
+    </div>
+
+    <!-- Timeline -->
+    <div class="relative border-l-4 border-[#F0C479] pl-10 space-y-14">
+      <!-- Step 1 -->
+      <div class="relative">
+        <div class="absolute w-4 h-4 bg-[#F0C479] rounded-full -left-6 top-2"></div>
+        <h3 class="text-xl font-semibold text-[#005EB8]">Step 1: Understanding Your Needs</h3>
+        <p class="text-gray-700 mt-2">We begin by listening to you. Whether it’s international cargo or local transport, our team ensures we understand your business goals and delivery expectations.</p>
+      </div>
+
+      <!-- Step 2 -->
+      <div class="relative">
+        <div class="absolute w-4 h-4 bg-[#F0C479] rounded-full -left-6 top-2"></div>
+        <h3 class="text-xl font-semibold text-[#005EB8]">Step 2: Planning with Precision</h3>
+        <p class="text-gray-700 mt-2">Our experts design customized logistics strategies to match your scale, budget, and timeline — using cutting-edge tools and real-time data.</p>
+      </div>
+
+      <!-- Step 3 -->
+      <div class="relative">
+        <div class="absolute w-4 h-4 bg-[#F0C479] rounded-full -left-6 top-2"></div>
+        <h3 class="text-xl font-semibold text-[#005EB8]">Step 3: Seamless Execution</h3>
+        <p class="text-gray-700 mt-2">With strong networks and global reach, we move your cargo efficiently, ensuring full transparency from pickup to delivery.</p>
+      </div>
+
+      <!-- Step 4 -->
+      <div class="relative">
+        <div class="absolute w-4 h-4 bg-[#F0C479] rounded-full -left-6 top-2"></div>
+        <h3 class="text-xl font-semibold text-[#005EB8]">Step 4: Support & Satisfaction</h3>
+        <p class="text-gray-700 mt-2">Our support doesn’t end at delivery. We assist with documentation, refunds, claims, and are always ready to resolve your queries.</p>
+      </div>
+    </div>
+  </div>
+</section>
 
 
 
