--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap" rel="stylesheet">
 <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
   <script src="https://cdn.tailwindcss.com"></script>
+<link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
 <link rel="stylesheet" href="./static/css/style.css">
 
@@ -24,7 +25,7 @@
     tailwind.config = {
       theme: {
         fontFamily: {
-        raleway: ['Raleway', 'sans-serif'],
+        grotesk: ['"Space Grotesk"', 'sans-serif'],
       },
         extend: {
           colors: {
@@ -47,7 +48,7 @@
 
 <body class="relative text-gray-900 font-sans">
    <div class="absolute inset-0 z-0">
-<img src="./static/images/contactbg.jpg" style="opacity: 0.04;" class="w-full h-full object-cover" />
+<img src="./static/images/contactbg.jpg" style="opacity: 0.05;" class="w-full h-full object-cover" />
   </div>
 
 
@@ -61,7 +62,7 @@
         <a href="index.html" class="hover:text-[#005EB8]">Home</a>
         <a href="about.html" class="text-[#005EB8] font-semibold">About</a>
         <a href="services.html" class="hover:text-[#005EB8]">Services</a>
-        <a href="contact.html" class="hover:text-[#005EB8]">Contact</a>
+        <!-- <a href="contact.html" class="hover:text-[#005EB8]">Contact</a> -->
       </nav>
       <a href="contact.html" class="bg-accent text-white px-4 py-2 rounded hover:brightness-110 transition">Contact Now</a>
     </div>
@@ -74,7 +75,7 @@
       <a href="index.html" class="block text-gray-800 hover:text-[#005EB8]">Home</a>
       <a href="about.html" class="block text-[#005EB8] font-semibold">About</a>
       <a href="services.html" class="block text-gray-800 hover:text-[#005EB8]">Services</a>
-      <a href="contact.html" class="block text-gray-800 hover:text-[#005EB8]">Contact</a>
+      <!-- <a href="contact.html" class="block text-gray-800 hover:text-[#005EB8]">Contact</a> -->
       <a href="contact.html" class="block bg-accent text-white text-center py-2 rounded hover:brightness-110">Contact Now</a>
     </div>
   </div>
