--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
 
 <body class="relative text-gray-900 font-sans">
    <div class="absolute inset-0 z-0">
-<img src="./static/images/contactbg.jpg" style="opacity: 0.04;" class="w-full h-full object-cover" />
+<img src="./static/images/contactbg.jpg" style="opacity: 0.05;" class="w-full h-full object-cover" />
   </div>
 <header  id="mainHeader" class="bg-transparent shadow-sm sticky top-0 z-50 w-full" style="position: fixed;">
   <div class="w-full px-4 md:px-48 py-6 flex items-center">
@@ -59,7 +59,7 @@
         <a href="index.html" class="hover:text-[#005EB8]">Home</a>
         <a href="about.html" class="hover:text-[#005EB8]">About</a>
         <a href="services.html" class="hover:text-[#005EB8]">Services</a>
-        <a href="contact.html" class="text-[#005EB8] font-semibold">Contact</a>
+        <!-- <a href="contact.html" class="text-[#005EB8] font-semibold">Contact</a> -->
       </nav>
       <a href="contact.html" class="bg-accent text-white px-4 py-2 rounded hover:brightness-110 transition">Contact Now</a>
     </div>
@@ -72,7 +72,7 @@
       <a href="index.html" class="block text-gray-800 hover:text-[#005EB8]">Home</a>
       <a href="about.html" class="block text-gray-800 hover:text-[#005EB8]">About</a>
       <a href="services.html" class="block text-gray-800 hover:text-[#005EB8]">Services</a>
-      <a href="contact.html" class="block text-[#005EB8] font-semibold">Contact</a>
+      <!-- <a href="contact.html" class="block text-[#005EB8] font-semibold">Contact</a> -->
       <a href="contact.html" class="block bg-accent text-white text-center py-2 rounded hover:brightness-110">Contact Now</a>
     </div>
   </div>
@@ -80,7 +80,7 @@
 
 <div class="w-full min-h-[25rem] h-[25rem] bg-black relative text-white px-[9.5rem] max-md:px-6 flex items-center justify-center">
 
-  <div class="absolute inset-0 bg-cover bg-center opacity-60" style="background-image: url('./static/images/contact2.jpeg');"></div>
+  <div class="absolute inset-0 bg-cover bg-center opacity-60" style="background-image: url('./static/images/contact1.jpg');"></div>
 
   <div class="relative z-10 text-center ">
     <h1 class="text-3xl md:text-4xl font-semibold">Contact Us</h1>
