--- a/services2.html
+++ b/services2.html
@@ -47,7 +47,7 @@
 
 <body class="relative text-gray-900 font-sans">
    <div class="absolute inset-0 z-0">
-<img src="./static/images/contactbg.jpg" style="opacity: 0.04;" class="w-full h-full object-cover" />
+<img src="./static/images/contactbg.jpg" style="opacity: 0.05;" class="w-full h-full object-cover" />
   </div>
 
 <header  id="mainHeader" class="bg-transparent shadow-sm sticky top-0 z-50 w-full" style="position: fixed;">
@@ -60,7 +60,7 @@
         <a href="index.html" class="hover:text-[#005EB8]">Home</a>
         <a href="about.html" class="hover:text-[#005EB8]">About</a>
         <a href="services.html" class="text-[#005EB8] font-semibold">Services</a>
-        <a href="contact.html" class="hover:text-[#005EB8]">Contact</a>
+        <!-- <a href="contact.html" class="hover:text-[#005EB8]">Contact</a> -->
       </nav>
       <a href="contact.html" class="bg-accent text-white px-4 py-2 rounded hover:brightness-110 transition">Contact Now</a>
     </div>
@@ -73,7 +73,7 @@
       <a href="index.html" class="block text-gray-800 hover:text-[#005EB8]">Home</a>
       <a href="about.html" class="block text-gray-800 hover:text-[#005EB8]">About</a>
       <a href="services.html" class="block text-[#005EB8] font-semibold">Services</a>
-      <a href="contact.html" class="block text-gray-800 hover:text-[#005EB8]">Contact</a>
+      <!-- <a href="contact.html" class="block text-gray-800 hover:text-[#005EB8]">Contact</a> -->
       <a href="contact.html" class="block bg-accent text-white text-center py-2 rounded hover:brightness-110">Contact Now</a>
     </div>
   </div>
