--- a/about.html
+++ b/about.html
@@ -14,6 +14,8 @@
 <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
   <script src="https://cdn.tailwindcss.com"></script>
 <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
 <link rel="stylesheet" href="./static/css/style.css">
 
@@ -21,15 +23,16 @@
 
 
 
-  <script>
+   <script>
     tailwind.config = {
       theme: {
-        fontFamily: {
-        grotesk: ['"Space Grotesk"', 'sans-serif'],
+     
+      fontFamily: {
+        rajdhani: ['"Rajdhani"', 'sans-serif'],
       },
         extend: {
           colors: {
-            primary: '#84D5E6',
+            primary: '#005EB8',
             accent: '#F0C479',
           }
         }
