--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
   <script src="https://cdn.tailwindcss.com"></script>
 <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
 <link rel="stylesheet" href="./static/css/style.css">
 
@@ -55,9 +56,7 @@
   <script>
     tailwind.config = {
       theme: {
-      //   fontFamily: {
-      //   raleway: ['Raleway', 'sans-serif'],
-      // },
+     
       fontFamily: {
         rajdhani: ['"Rajdhani"', 'sans-serif'],
       },
@@ -127,7 +126,7 @@
         <img src="./static/images/view-luxurious-cruise-ship.jpg" class="w-full h-full object-cover zoom-in" />
         <div class="absolute inset-0 bg-black bg-opacity-50"></div>
         <div class="absolute left-10 top-1/2 transform -translate-y-1/2 text-white  md:px-44 z-10">
-          <h2 class="text-[3rem] md:text-[5rem] font-bold leading-none slide-in-left mb-10">Your Cargo,<br>Our Ocean Journey</h2>
+          <h2 class="text-[3rem] md:text-[5.5rem] font-bold leading-none slide-in-left mb-10">Your Cargo,<br>Our Ocean Journey</h2>
           <p class="text-lg md:text-xl text-white mb-6 slide-in-bottom">
             Reliable ocean freight solutions connecting major ports worldwide.
           </p>
@@ -143,7 +142,7 @@
         <img src="./static/images/vehicle-move.jpg" class="w-full h-full object-cover zoom-in" />
         <div class="absolute inset-0 bg-black bg-opacity-50"></div>
         <div class="absolute left-10 top-1/2 transform -translate-y-1/2 text-white md:px-44 z-10">
-          <h2 class="text-[3rem] md:text-[5rem] font-bold leading-none slide-in-left mb-10">Truck Freight<br>Across Every Highway</h2>
+          <h2 class="text-[3rem] md:text-[5.5rem] font-bold leading-none slide-in-left mb-10">Truck Freight<br>Across Every Highway</h2>
           <p class="text-lg md:text-xl text-white mb-6 slide-in-bottom">
             Delivering goods swiftly and safely through a vast road network.
           </p>
@@ -159,7 +158,7 @@
         <img src="./static/images/transport-logistics-concept.jpg" class="w-full h-full object-cover zoom-in" />
         <div class="absolute inset-0 bg-black bg-opacity-50"></div>
         <div class="absolute left-10 top-1/2 transform -translate-y-1/2 text-white  md:px-44 z-10">
-          <h2 class="text-[3rem] md:text-[5rem] font-bold leading-none slide-in-left mb-10">Fast, Safe<br>Global Air Delivery</h2>
+          <h2 class="text-[3rem] md:text-[5.5rem] font-bold leading-none slide-in-left mb-10">Fast, Safe<br>Global Air Delivery</h2>
           <p class="text-lg md:text-xl text-white mb-6 slide-in-bottom">
             Swift international shipping with guaranteed safety and speed through the skies.
           </p>
@@ -269,7 +268,7 @@
 
 <section class="py-20 px-6 md:px-20 ">
   <div class="max-w-7xl mx-auto text-center mb-16">
-    <h2 class="text-4xl md:text-4xl font-semibold text-[#005EB8] mb-4">
+    <h2 class="text-4xl md:text-4xl font-bold text-[#005EB8] mb-4">
       10+ Years of Trusted Experience
     </h2>
     <p class="text-gray-600 text-lg max-w-2xl mx-auto">
