--- a/services.html
+++ b/services.html
@@ -13,7 +13,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap" rel="stylesheet">
 <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
   <script src="https://cdn.tailwindcss.com"></script>
-
+<link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="./static/css/style.css">
 
 
@@ -23,12 +24,13 @@
   <script>
     tailwind.config = {
       theme: {
-        fontFamily: {
-        raleway: ['Raleway', 'sans-serif'],
+     
+      fontFamily: {
+        rajdhani: ['"Rajdhani"', 'sans-serif'],
       },
         extend: {
           colors: {
-            primary: '#84D5E6',
+            primary: '#005EB8',
             accent: '#F0C479',
           }
         }
