--- a/index.html
+++ b/index.html
@@ -173,9 +173,9 @@
 
     <!-- Dots -->
     <div class="absolute right-6 top-1/2 transform -translate-y-1/2 flex flex-col gap-4 z-30">
-      <button class="dot w-3 h-3 rounded-full bg-white opacity-50" data-index="0"></button>
-      <button class="dot w-3 h-3 rounded-full bg-white opacity-50" data-index="1"></button>
-      <button class="dot w-3 h-3 rounded-full bg-white opacity-50" data-index="2"></button>
+      <button class="dot w-3 h-3 max-md:w-2 max-md:h-2 rounded-full bg-white opacity-50" data-index="0"></button>
+      <button class="dot w-3 h-3 max-md:w-2 max-md:h-2 rounded-full bg-white opacity-50" data-index="1"></button>
+      <button class="dot w-3 h-3 max-md:w-2 max-md:h-2 rounded-full bg-white opacity-50" data-index="2"></button>
     </div>
   </section>
 </div>
@@ -187,7 +187,7 @@
 <div id="explore"></div>
 
 
-<section class=" py-16 px-6 md:px-20 relative overflow-hidden">
+<section class=" py-16 px-6 md:px-20 relative overflow-hidden max-md:py-[0.5rem]">
 
   <div class="absolute top-0 right-0 w-full h-full z-0 pointer-events-none">
     <img src="./static/images/bg3.png" 
@@ -229,7 +229,7 @@
   <div id="scrollContainer" class="flex bg-[#005EB8] overflow-x-auto scroll-smooth snap-x snap-mandatory w-full">
 
     <div class="flex-shrink-0 w-full md:w-1/2 h-[500px] snap-start transition-all duration-500">
-      <div class="flex flex-col sm:flex-row w-full h-full">
+      <div class="flex flex-col-reverse sm:flex-row w-full h-full">
         <div class="w-full sm:w-1/2 h-[250px] sm:h-full overflow-hidden relative group">
           <img src="https://cdn.pixabay.com/photo/2017/01/29/15/21/container-2018508_640.jpg" alt="Cargo Transport" class="w-full h-full object-cover transform group-hover:scale-110 transition duration-300">
           <div class="absolute inset-0 bg-black bg-opacity-40 translate-x-full group-hover:translate-x-0 transition-transform duration-500 ease-in-out"></div>
@@ -243,7 +243,7 @@
     </div>
 
     <div class="flex-shrink-0 w-full md:w-1/2 h-[500px] snap-start transition-all duration-500">
-      <div class="flex flex-col sm:flex-row w-full h-full">
+    <div class="flex flex-col-reverse sm:flex-row w-full h-full">
         <div class="w-full sm:w-1/2 h-[250px] sm:h-full overflow-hidden relative group">
           <img src="https://cdn.pixabay.com/photo/2021/11/15/18/38/container-6799046_640.jpg" alt="Import & Export" class="w-full h-full object-cover transform group-hover:scale-110 transition duration-300">
           <div class="absolute inset-0 bg-black bg-opacity-40 translate-x-full group-hover:translate-x-0 transition-transform duration-500 ease-in-out"></div>
