--- a/services2.html
+++ b/services2.html
@@ -53,7 +53,7 @@
     <!-- Background Image -->
     <img 
       src="./static/images/contactbg.jpg"
-      class="w-full h-full object-cover opacity-5 hidden md:block" 
+      class="w-full h-full object-fill opacity-5 hidden md:block" 
       alt="Background"
     />
 
