--- a/services2.html
+++ b/services2.html
@@ -48,12 +48,11 @@
 </head>
 
 <body class="relative text-gray-900 font-sans">
-  <!-- Background Image Wrapper -->
+ 
   <div class="absolute inset-0 z-0">
-    <!-- Background Image -->
     <img 
       src="./static/images/contactbg.jpg"
-      class="w-full h-full object-fill opacity-5 hidden md:block" 
+      class="w-full h-full object-fill opacity-5 max-md:hidden block" 
       alt="Background"
     />
 
