--- a/about.html
+++ b/about.html
@@ -55,13 +55,10 @@
   <div class="absolute inset-0 z-0">
     <img 
       src="./static/images/contactbg.jpg"
-      class="w-full h-full object-cover opacity-[0.03] max-md:hidden block" 
-      alt="Background"
-    />
+      class="w-full h-full object-cover opacity-[0.03] max-md:hidden block " 
+      alt="Background"/>
 
-    <!-- <div class="block md:hidden w-full h-full bg-repeat opacity-15" 
-         style="background-image: url('./static/images/contactbg.jpg'); background-size: 400px 400px;">
-    </div> -->
+   
   </div>
 
 
@@ -143,8 +140,10 @@
       </p>
       <div class="text-lg text-[#031A4C] font-medium">
         Call for any query! <br>
-        <span class="text-2xl font-bold text-black">+000000000</span>
-      </div>
+<p class="mt-2">
+  <span class="inline-block min-w-[45px] font-semibold">Phone:</span> +91 8589961888<br>
+  <span class="inline-block min-w-[45px] pl-16"></span>   +91 8129033332
+</p>      </div>
     </div>
 
     <div class="grid grid-cols-2 gap-6 relative">
@@ -161,7 +160,7 @@
 
       <div class="flex items-center justify-center">
         <div class="bg-[#005EB8] text-white p-6 rounded-lg text-center shadow">
-          <h3 class="text-3xl font-bold">12+</h3>
+          <h3 class="text-3xl font-bold">10+</h3>
           <p class="text-sm mt-2">Years of Experience</p>
         </div>
       </div>
