--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <img 
       src="./static/images/contactbg.jpg"
       class="w-full h-full object-cover opacity-[0.03] max-md:hidden block" 
-      alt="Background"
+      alt="Background"style="background-size: 400px 400px;"
     />
 
     <!-- <div class="block md:hidden w-full h-full bg-repeat opacity-15" 
